--- a/climadapt/index.qmd
+++ b/climadapt/index.qmd
@@ -8,39 +8,39 @@
 
 {{< include functionalities.qmd >}}
 
-## View Climate change effects​ per Climate zone or State
+## Climate change effects​ per Climate zone or State
 
 {{< include climate_change_effects.qmd >}}
 
-## Run a climate change risk pre-screening assessment​
+## Climate change risk pre-screening assessment​
 
 {{< include run_climate_change.qmd >}}
 
-## View the pre-screening assessment report​ summary
+## Pre-screening assessment report​ summary
 
 {{< include pre_screening.qmd >}}
 
-## Plan for the financial implications of climate change
+## Financial implications of climate change
 
 {{< include financial_plan.qmd >}}
 
-## View the economic assessment results
+## Economic assessment results
 
 {{< include economic_assessment.qmd >}}
 
-## Search for potential climate impacts and targeted measures to reduce vulnerabilities
+## Potential climate impacts and targeted measures to reduce vulnerabilities
 
 {{< include search_climate.qmd >}}
 
-## Check the key steps for climate risk assessment and adaptation action
+## Key steps for climate risk assessment and adaptation action
 
 {{< include key_climate.qmd >}}
 
-## Get guidance on climate change risks and adaptation measures from various sources
+## Guidance on climate change risks and adaptation measures from various sources
 
 {{< include guidance_climate.qmd >}}
 
-## View ClimAdapt data sources
+## ClimAdapt data sources
 
 {{< include climadapt_data.qmd >}}
 
