Added references to the DecarbFin and other improvements

--- a/decarbfin/dashboard.qmd
+++ b/decarbfin/dashboard.qmd
@@ -26,7 +26,7 @@ Key volumes per geography, over time and per instrument, per Environmental, Soci
 
 Public data (web).
 
-For a comprehensive list of sources, click [here](https://docs.google.com/document/d/1RIO_S5FOcCurFOcuOKQNBF7hQQtOMEh6/edit?amp;amp;ouid=107479216635173070479&amp;rtpof=true&amp;sd=true).
+For a comprehensive list of sources, check the References section.
 
 ------------------------------------------------------------------------
 
