--- a/decarbfin/functionalities.qmd
+++ b/decarbfin/functionalities.qmd
@@ -19,7 +19,7 @@
 -   **Dictionary**: View the Dictionary of Terms
 -   **Search Instruments**: Search and Filter my “private” Sustainable Finance instruments
 -   **Essential View**: View the Essentials (ESG Frameworks, Roadmaps
--   **Dashboard**: View the Sustainable Finance dashboard
+-   **Dashboard**: View the Flynance dashboard
 -   **Bluebook**: Download the Bluebook 
 
 ------------------------------------------------------------------------
